--- a/Test/src/test-three.js/three.css
+++ b/Test/src/test-three.js/three.css
@@ -2,9 +2,17 @@ body {
     margin: 0px;
 }
 
-.particle{
+.particle.settings {
     top: 10px;
     right: 10px;
+    width: 270px;
+    height: 233px;
+    resize: auto;
+}
+
+.particle.config {
+    top: 20px;
+    left: 10px;
     width: 270px;
     height: 233px;
     resize: auto;
@@ -13,18 +21,6 @@ body {
 .particle .container {
     width: 100%;
     padding: 0;
-}
-
-.particle .btn {
-    height: 6px;
-    line-height: 0;
-    vertical-align: top;
-}
-
-.particle .btn-span {
-    margin-right: 0px;
-    line-height: 0.3;
-    top: 1px;
 }
 
 .particle .dg.main {
