--- a/Test/src/test-vs/test.css
+++ b/Test/src/test-vs/test.css
@@ -12,6 +12,7 @@ body {
 }
 
 .test-config {
+    border-radius: 4px;
     margin-bottom: 10px;
     height: 250px;
     width: 300px;
@@ -23,14 +24,20 @@ body {
     height: 34px;
     border-radius: 4px;
     border: solid 1px #3883fa;
+    margin-bottom: 4px;
+    cursor: pointer;
 }
 
 .test-results {
     padding: 10px 0px 0px 10px;
     border: solid 1px #3883fa;
     border-radius: 4px;
-    margin-top: 10px;
+    margin-top: 6px;
     width: 288px;
     height: 70px;
+}
+
+div.jsoneditor {
+    border-radius: 4px;
 }
 
